# cfgManager

./: CLAUDE.md  ICON_GUIDE.md  PLAN.MD  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  file_system.rs  lib.rs  merger.rs  models.rs  sanitizer.rs
src/components/: ConfigList.jsx  ConfigList.tsx  TabbedEditor.jsx  TabbedEditor.tsx  WorkspaceTree.tsx
src/hooks/: useAutoSave.ts
src/pages/: Dashboard.jsx  Dashboard.tsx  WorkspacePicker.jsx  WorkspacePicker.tsx
src/stores/: configStore.js  configStore.ts
