[package]
name = "config-guardian"
version = "0.1.0"
description = "Config Guardian - Secure configuration file management tool"
authors = ["cai"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "config_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
sha2 = "0.10"
hex = "0.4"

[profile.release]
# 全程序链接时优化，跨 crate 消除死代码
lto = true
# 单代码生成单元，最大化优化机会（编译慢但体积小）
codegen-units = 1
# 体积优化，同时保留足够的性能优化
opt-level = "s"
# 剥离调试符号
strip = "symbols"
# panic 直接 abort，省掉 unwind 表
panic = "abort"
